# ai-ops-copilot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: incidents.json  kb_articles.json  sample_requests.json
src/agentic_ops_copilot/: __init__.py  api.py  cli.py  config.py  data_store.py  engine.py  graph_app.py  llm_backends.py  retrieval.py  schemas.py  streamlit_app.py  tips.py
tests/: test_engine.py  test_retrieval.py  test_tips.py
